fixed overflowing content in the pages.

--- a/src/views/services.css
+++ b/src/views/services.css
@@ -2,9 +2,12 @@
   width: 100%;
   display: flex;
   overflow: auto;
+  position: relative;
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
+  justify-content: flex-start;
+  background-color: var(--dl-color-backgrounds-gray);
 }
 .services-navbar1 {
   flex: 0 0 auto;
